apps/gitops-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-app
  labels:
    app.kubernetes.io/name: gitops-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gitops-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gitops-app
    spec:
      containers:
        - name: gitops-app
          image: ghcr.io/ankur512512/gitops-app-repo:main
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
