apps/gitops-app/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app.kubernetes.io/name: db
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
