apps/gitops-app/base/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitops-app
  template:
    metadata:
      labels:
        app: gitops-app
        demo: kargo-promotion
        version: "1.9.2-final-alias"
    spec:
      containers:
      - name: app
        image: ghcr.io/ankur512512/gitops-app-repo:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: gitops-app
spec:
  selector:
    app: gitops-app
  ports:
  - port: 80
    targetPort: 8000
