apps/gitops-app/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitops-app
spec:
  parentRefs:
    - name: shared-gateway
      namespace: gateway
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitops-app
          port: 80
